2020-01-21 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_bulb.c: Revise geda_bulb_draw_indicator to not
      bother checking and setting state_type to GTK_STATE_ACTIVE or
      GTK_STATE_PRELIGHT since alpha is only varied if state_type is
      GTK_STATE_INSENSITIVE.

2020-01-20 Wiley E. Hill <wileyhill@gmail.com>

    * include/: Reluctantly include all of gtk.h:

          * include/geda_dockbox.h
          * include/geda_font_button.h

    * src/widgets/geda_bulb.c: Revise geda_bulb_clicked to set new_state
      to GTK_STATE_ACTIVE when GSEAL_ENABLE is defined, Eliminate pointer
      to GtkButton, and utilize macros:

          * geda_get_container_border_width
          * geda_toggle_button_get_active
          * geda_toggle_button_set_active

    * src/widgets/geda_check_menu_item.c: Utilize geda_get_widget_window
      unsigned border_width in geda_real_check_menu_item_draw_indicator.

2020-01-16 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_accel_label.c: Revise geda_accel_label_expose_event to
      use gtk_widget_get_style and geda_get_widget_window when GSEAL_ENABLE is
      defined.

    * src/widgets/geda_bulb.c: Utilize geda_toggle_button_get_active and
      geda_toggle_button_set_active macros. Revise geda_bulb_clicked to set
      new_state to GTK_STATE_ACTIVE when GTK_STATE_NORMAL is defined.

2020-01-16 Wiley E. Hill <wileyhill@gmail.com>

    * src/functions/geda_keyboard.c: Include gdk.h instead of only gdkkeys.h.

    * src/functions/geda_mnemonic_hash.c: Include geda_gtk_compat.h and utilize
      geda_get_widget_window macro.

    * src/functions/geda_widget.c: Include geda_gtk_compat.h and utilize macro
      geda_get_accel_group_is_locked in geda_widget_get_accel_path and macro
      geda_get_widget_window in geda_widget_set_pointer_position.

    * src/widgets/geda_accel_label.c: Utilize geda_get_widget_requisition macro.
      Revise geda_accel_label_expose_event to skip adding miscellaneous xpad if