@@ -1,5 +1,8 @@
 2020-01-21 Wiley E. Hill <wileyhill@gmail.com>
 
+    * include/geda_gtk_compat.h: Add macro geda_get_widget_style to handle
+      the case when GSEAL_ENABLE is defined.
+
     * src/widgets/geda_bulb.c: Revise geda_bulb_draw_indicator to not
       bother checking and setting state_type to GTK_STATE_ACTIVE or
       GTK_STATE_PRELIGHT since alpha is only varied if state_type is
